# llemur

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llemur/: cli.py  config.py  cr.py  main.py  perf_analysis.py  summarize.py
src/llemur/llm/: anthropic_llm.py  llm_base.py  llm_interface.py  local_llm.py  openai_llm.py
src/llemur/prompts/: code_summarization_icl_python.prompt  perf_analysis_rust.prompt
